test/type/fail/compare_wrong_second.j
class A{
  Void main() {
    return 5 > null;
  }
}
